# omni-tool-spectral-core

./: .gitignore  ANTIGRAVITY_MANIFEST.md  CHANGELOG.md  COMMIT_MESSAGE.md  CONTRIBUTE.md  CYBIOSPHERE_ALIGNMENT.md  Cargo.toml  D16_DRIVER_SPEC.md  DEPLOYMENT_LOG.md  EXPERIMENTS.md  PHYSICS_MANIFEST.md  QUANTUM_ARCH_SPEC.md  README.md  SOVEREIGNTY_ARCHITECTURE.md  SOVEREIGN_ACCESS.md  SOVEREINTY_ARCHITECTURE.md  SPECTRAL_SCOPING.md  STUDY_RP1_QUANTUM_LINK.md  ZEPHYR_RUST_BRIDGE.md  atomic_drop.sh  d16_ble_scan.py  operator_manifest.json  test_hailo_shim.cpp  verify_pickup.sh
.agent/workflows/: restore_flow_rainbow.md
dashboard/: README.md  index.html
deployment/: moodlebox_deploy.md
experiments/: entrainment_relay.rs  pico_buzzer_ac.md  torsional_pendulum.md
experiments/pico_theremin/: theremin_ac.py
hubble_registrar/: Cargo.toml
hubble_registrar/src/: main.rs
keys/: phitl_attestation.res
modules/: rainbow_railgun.py  zk_scanner.rs
modules/crew_core/: Cargo.toml  build.rs  fold_output.txt  fold_result.txt  wood_metal_crypt.py
modules/crew_core/src/: cartographer.rs  lib.rs  rainbow_railgun.rs  stethoscope.rs  wood_metal.rs
modules/crew_core/src/interface/: a2a.rs  brain.rs  mod.rs  polymerize.rs  weave.rs
modules/d16_bridge/: Cargo.toml
modules/d16_bridge/src/: ble_bridge.rs  broadcast.rs  compass.rs  lib.rs  main.rs  resonance.rs  serial_bridge.rs  stance.rs
modules/d16_kernel_recovered/d16_runner/src/: main.rs
modules/d16_kernel_recovered/src/: d16_bridge.rs  d16_kernel.S  d16_kernel_portable.c  d16_kernel_thumb.S
modules/d16_sdk/core/: Cargo.toml  generate_kotlin.sh  generate_python.sh
modules/d16_sdk/core/src/: lib.rs
modules/evals/: spectral_evals.py
modules/hailo-apps-infra/hailo_apps/hailo_app_python/core/cpp_postprocess/cpp/: d16_logic.hpp  meson.build  yolov8pose_postprocess.cpp
modules/hailo_d16_shim/: CMakeLists.txt  d16_hailo_feeder  d16_hailo_feeder.cpp  hailo_immune_system.cpp  hdd_cymatics.py
modules/millennium_watch/: Cargo.toml  HARMONIC_TOPOLOGY.md  README.md
modules/millennium_watch/src/: README.md  alphagenome_shim.py  law_cache.rs  lib.rs  main.rs  verify_shim.py
modules/millennium_watch/src/agents/: mod.rs
modules/ms_antigravity_heartbeat/: CMakeLists.txt  Cargo.toml  build.rs  prj.conf
modules/ms_antigravity_heartbeat/src/: lib.rs
modules/nico_harvest/: huskylens.rs  soft_fpga.rs  soft_fpga_analysis.md  vision_test.rs
modules/project_orca/src/: acss.py  millennium_optimization.py  orca_platform.py  settings.py  verify_optimization.py  visual_braille.py
modules/ripple_tank/: ripple_tank.py
modules/ripple_tank_core/: Cargo.toml
modules/ripple_tank_core/src/: main.rs
modules/robin_d7/: Cargo.toml
modules/robin_d7/src/: main.rs
modules/robin_d7_rust/: Cargo.toml
modules/robin_d7_rust/src/: lib.rs  main.rs
modules/rp1_rio/: Cargo.toml
modules/rp1_rio/src/: lib.rs
modules/spectral_sensor/: Cargo.toml
modules/spectral_sensor/examples/: simulate_fireworks.rs
modules/spectral_sensor/src/: behavioral_engine.rs  eight_gate.rs  lib.rs  pdf_lens.rs  steward.rs  zephyr_west.rs
modules/z_rr/: Cargo.toml  build.rs
modules/z_rr/examples/: d16_harness.rs
modules/z_rr/src/: lib.rs  main.rs  railgun.rs  shm_writer.rs
omni-tool-spectral-core/: CONTRIBUTE.md  EXPERIMENTS.md  PHYSICS_MANIFEST.md  PREPRINT.md  README.md  SPECTRAL_NOTES.md  VISION.md
omni-tool-spectral-core/proofs/: sketch_bsd.md  sketch_pnp.md  sketch_yangmills.md
omni-tool-spectral-core/src/: lib.rs  main.rs
proofs/: MILLENNIUM_MANIFEST.md  sketch_hodge.md  sketch_navierstokes.md  sketch_riemann.md  workshop_sobel_entrainment.md
scripts/: agent_swarm.sh  blind_channel.py  d16_hailo_bridge.py  ecg_plotter.py  init_agents.py  robin_d7_heap.py  soft_fpga_omnitool.py  sovereign_navigator.py
scripts/js_prototypes/: z_trend_evaluator.ts
src/: crew.rs  d16_driver.rs  lib.rs  main.rs  projection_shim.rs  soft_fpga.rs  tonic.rs  unoq_shim.rs
tonics/: README.md
workspaces/: d7_robin  ms_antigravity
workspaces/d10_jinbe/: README.md  agent_manifest.json
workspaces/d11_vivi/: README.md  agent_manifest.json
workspaces/d12_carrot/: README.md  agent_manifest.json
workspaces/d13_yamato/: README.md  agent_manifest.json
workspaces/d14_momo/: README.md  agent_manifest.json
workspaces/d15_kinemon/: README.md  agent_manifest.json
workspaces/d16_law/: README.md  agent_manifest.json
workspaces/d1_luffy/: README.md  agent_manifest.json
workspaces/d2_zoro/: README.md  agent_manifest.json
workspaces/d3_nami/: README.md  agent_manifest.json
workspaces/d4_usopp/: README.md  agent_manifest.json
workspaces/d5_sanji/: README.md  agent_manifest.json
workspaces/d6_chopper/: README.md  agent_manifest.json
workspaces/d7_robin_backup/: README.md  agent_manifest.json
workspaces/d8_franky/: README.md  agent_manifest.json
workspaces/d9_brook/: README.md  agent_manifest.json
zephyr_d16_app/: CMakeLists.txt  app.overlay  prj.conf
zephyr_d16_app/boards/: arduino_giga_r1_stm32h747xx_m7.overlay  arduino_uno_q.overlay  arduino_uno_r4_wifi.overlay  b_u585i_iot02a.overlay
zephyr_d16_app/src/: main.c
zephyr_d16_m4/: CMakeLists.txt  prj.conf
zephyr_d16_m4/boards/: arduino_giga_r1_stm32h747xx_m4.overlay
zephyr_d16_m4/src/: main.c
zephyr_d16_mesh/: CMakeLists.txt  prj.conf
zephyr_d16_mesh/src/: main.c
zephyr_harmonic_net/: CMakeLists.txt  app.overlay  prj.conf  west.yml
zephyr_harmonic_net/boards/: rpi_pico2_rp2350a_m33_w.overlay
zephyr_harmonic_net/src/: main.c
