[package]
name = "d16_bridge"
version = "0.1.0"
edition = "2021"

[dependencies]
serialport = "4.2"
log = "0.4"
simple_logger = "4.3"
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
hex = "0.4"
btleplug = "0.11"
tokio = { version = "1", features = ["full"] }
uuid = "1.0"
bluer = { version = "0.15", features = ["bluetoothd"] }
reqwest = { version = "0.11", features = ["json", "blocking"] }

[[bin]]
name = "d16_listener"
path = "src/main.rs"

[[bin]]
name = "hubble_cloud"
path = "src/bin/hubble_cloud.rs"

[[bin]]
name = "hubble_register"
path = "src/bin/hubble_register.rs"
