[package]
name = "rustapp"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib"]

[dependencies]
log = "0.4"
zephyr = { git = "https://github.com/zephyrproject-rtos/zephyr-lang-rust.git" }

[build-dependencies]
zephyr-build = { git = "https://github.com/zephyrproject-rtos/zephyr-lang-rust.git" }
