[package]
name = "z_rr"
version = "0.1.0"
edition = "2021"

[dependencies]
zip = "0.6"
rand = "0.8"
chrono = "0.4"
ndarray = "0.15"
ndarray-npy = "0.8"
memmap2 = "0.5"
rp1_rio = { path = "../rp1_rio" }

[dev-dependencies]
millennium_watch = { path = "../millennium_watch" }


[build-dependencies]
cc = "1.0"


[lib]
name = "z_rr"
path = "src/lib.rs"

[[bin]]
name = "zrr_core"
path = "src/main.rs"
